@@ -45,6 +45,7 @@ Module  bibtex      _tcl  _man  _exa
 Module  blowfish    _tcl  _man  _null
 Module  cache       _tcl  _man  _null
 Module  calendar     _tci _man  _null
+Module  clock       _tcl  _null _null
 Module  cmdline     _tcl  _man  _null
 Module  comm        _tcl  _man  _null
 Module  control      _tci _man  _null
