@@ -1,0 +1,6 @@
+2013-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* New module, 2 packages.
+	* rfc2822.tcl: Parsing rfc2822 dates (mail, news)
+	* iso8601.tcl: Parsing iso8601 dates and times.
+	* pkgIndex.tcl:
