@@ -1,3 +1,8 @@
+2013-01-24  Andreas Kupries  <andreask@activestate.com>
+
+	* New module and packages: clock (rfc2822, iso8601).
+	  Tcl 8.5 only.
+
 2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* configure.in: [Bug 3593146]: Extended with CYGPATH usage to
